tests/baselines/reference/decoratorOnClassAccessor8.errors.txt
tests/cases/conformance/decorators/class/accessor/decoratorOnClassAccessor8.ts(28,14): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.


==== tests/cases/conformance/decorators/class/accessor/decoratorOnClassAccessor8.ts (1 errors) ====
    declare function dec<T>(target: any, propertyKey: string, descriptor: TypedPropertyDescriptor<T>): TypedPropertyDescriptor<T>;
    
    class A {
        @dec get x() { return 0; }
        set x(value: number) { }
    }
    
    class B {
        get x() { return 0; }
        @dec set x(value: number) { }
    }
    
    class C {
        @dec set x(value: number) { }
        get x() { return 0; }
    }
    
    class D {
        set x(value: number) { }
        @dec get x() { return 0; }
    }
    
    class E {
        @dec get x() { return 0; }
    }
    
    class F {
        @dec set x(value: number) { }
                 ~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
    }